Sun Jan  4 14:50:59 CET 2009 Guido Günther <agx@sigxcpu.org>

	use GtkSecureEntry instead of GtkEntry for the password entry
	* src/Makefile.am (AM_CPPFLAGS): add secmem/, gtksecentry/ to include
	  path
	* src/krb5-auth-dialog.c: use gtk_secure_entry_get_text instead of
	  gtk_entry_get_text
	* src/krb5-auth-dialog.glade (krb5_auth_dialog_setup): use custom widget
	  (ka_create_gtk_secure_entry,ka_secmem_init): new functions
	  (main): call ka_secmem_init, set custom glade handler for password
	  entry field

Sun Jan  4 14:48:14 CET 2009 Guido Günther <agx@sigxcpu.org>

	move dbus handling into a separate file
	* src/krb5-auth-dbus.[ch]: new file
	* src/krb5-auth-dialog.c: remove dbus related code
	* src/Makefile.am (krb5_auth_dialog_SOURCES): add krb5-auth-dbus.[ch]

Sun Jan  4 14:39:16 CET 2009 Guido Günther<agx@sigxcpu.org>

	add gtksecentry/secmem from gpg pinentry
	* Makefile.am (SUBDIRS): add gtksecentry
	* acinclude.m4: add GNUPG_CHECK_TYPEDEF, GNUPG_CHECK_MLOCK
	* gtksecentry/{Makefile.am,gtksecentry.c,gtksecentry.h}: new files
	* secmem/{Makfile.am,Manifest,memory.h,secmem{-util.h,.c},util.[ch]}:
	  new files
	* configure.ac: checks for secmem
	* src/Makefile.am (krb5_auth_dialog_LDADD): add libgtksecentry.a,
	  libsecmem.a

Sun Jan  4 14:28:06 CET 2009 Guido Günther <agx@sigxcpu.org>

	add a tray icon
	* configure.ac: check for libnotify, dbus, gconf
	* Makefile.am, icons/krb-{no-,}valid-ticket.png: add icons
	* src/krb5-auth-applet.[ch]: new files
	* src/krb5-auth-gconf.[ch]: new files
	* src/krb5-auth-notify.[ch]: new files
	* src/Makefile.am: expand krb5_auth_dialog_SOURCES and
	  krb5_auth_dialog_LDADD
	* README: document gconf keys

2008-09-26  Guido Guenther  <agx@sigxcpu.org>

	* src/krb5-auth-dialog.glade: remove width_request from
	krb5_auth_message_label. Now we display the whole principal name
	instead of cutting it off at an arbitrary position.

2008-09-26  Guido Guenther  <agx@sigxcpu.org>

	* src/krb5-auth-dialog.1.in: add manpage section
