@@ -1,3 +1,8 @@
+Sun Jan  4 16:15:57 CET 2009 Guido Günther <agx@sigxcpu.org>
+
+	* src/krbt-auth-{applet,dialog}.c don't popup the dialog if we have a
+	  tray icon
+
 Sun Jan  4 14:50:59 CET 2009 Guido Günther <agx@sigxcpu.org>
 
 	use GtkSecureEntry instead of GtkEntry for the password entry
